temp/files_analysis.log
  File "<string>", line 1
    import sqlite3; conn = sqlite3.connect('projects/sampleSrc/metadata.db'); cursor = conn.cursor(); cursor.execute('SELECT file_name, file_type, line_count FROM files ORDER BY file_name'); files = cursor.fetchall(); print('=== FILES TABLE ==='); for f in files: print(f'  {f[0]} ({f[1]}): {f[2]} lines'); conn.close()
                                                                                                                                                                                                                                                        ^^^
SyntaxError: invalid syntax
